--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,4 +1,5 @@
 
+
 <body>
   <div class="m-4">
       <nav class="navbar navbar-expand-lg navbar-light bg-light" style="background-color:#333 ;">
@@ -12,7 +13,6 @@
                       <a routerLink="/home"  routerLinkActive="active" href="#" class="nav-item nav-link ">Home</a>
                       <a routerLink="/about-us"  routerLinkActive="active" href="#" class="nav-item nav-link">About us</a>
                       <a routerLink="/contact-us" routerLinkActive="active" href="#" class="nav-item nav-link">Contact Us</a>
-                      <!-- <a href="#" class="nav-item nav-link disabled" tabindex="-1">Reports</a> -->
                   </div>
                   <div class="navbar-nav ms-auto">
                       <a href="#" class="nav-item nav-link">Login</a>
@@ -20,4 +20,6 @@
               </div>
           </div>
       </nav>
-  </div>
+  </div> 
+
+  <!-- <p-tabMenu [model]="items" [activeItem]="activeItem"></p-tabMenu> -->
