--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<!-- <div class="container">
   <div class="card" style="width: 18rem;">
     <img src="https://images.unsplash.com/photo-1604085572504-a392ddf0d86a?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=387&q=80" class="card-img-top" alt="..." 
     style="height: fit-content;">
@@ -9,21 +9,12 @@
     </div>
   </div>
 
-  <div class="card" style="width: 18rem;">
-    <img src="https://images.unsplash.com/photo-1604085572504-a392ddf0d86a?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=387&q=80" class="card-img-top" alt="..." 
-    style="height: fit-content;">
-    <div class="card-body">
-      <h5 class="card-title">Card title</h5>
-      <p class="card-text">describtion describtion describtion describtion describtion describtion describtion </p>
-      <a href="#" class="btn btn-primary">Read Article</a>
-    </div>
-  </div>
 
   <div class="card" style="width: 18rem;">
     <img src="https://images.unsplash.com/photo-1604085572504-a392ddf0d86a?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=387&q=80" class="card-img-top" alt="..." 
     style="height: fit-content;">
     <div class="card-body">
-      <h5 class="card-title">Card title</h5>
+      <h5 class="card-title">{{randomName}}</h5>
       <p class="card-text">describtion describtion describtion describtion describtion describtion describtion </p>
       <a href="#" class="btn btn-primary">Read Article</a>
     </div>
@@ -62,4 +53,25 @@
     </div>
   </div>
 </div>
+ -->
+
+
+
+ <div class="card" style="width: 18rem;">
+  <img src="{{img}}" class="card-img-top" alt="..." 
+  style="height: fit-content;">
+  <div class="card-body">
+    <h5 class="card-title">{{randomName}}</h5>
+    <p class="card-text" style=" 
+    
+    overflow: hidden;
+    text-overflow: ellipsis;
+    max-width: 200px;
+    
+    ">{{paragrah}}</p>
+    <a href="#" class="btn btn-primary">Read Article</a>
+  </div>
+</div>
+
+
 
