login and register

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -15,7 +15,9 @@
                       <a routerLink="/contact-us" routerLinkActive="active" href="#" class="nav-item nav-link">Contact Us</a>
                   </div>
                   <div class="navbar-nav ms-auto">
-                      <a href="#" class="nav-item nav-link">Login</a>
+                      <a href="#" class="nav-item nav-link" routerLink="/login" routerLinkActive="active">Login</a>
+                      <a href="#" class="nav-item nav-link"routerLink="/register" routerLinkActive="active">Register</a>
+
                   </div>
               </div>
           </div>
